--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tiptap/pm": "^2.11.2",
     "@tiptap/react": "^2.11.2",
     "@tiptap/starter-kit": "^2.11.2",
+    "axios": "^1.7.9",
     "modern-screenshot": "^4.5.5",
     "motion": "^12.0.1",
     "postcss-loader": "^8.1.1",
