--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@floating-ui/react-dom": "^2.1.2",
     "@react-oauth/google": "^0.12.1",
+    "@tanstack/react-query": "^5.66.0",
     "@tiptap/extension-character-count": "^2.11.2",
     "@tiptap/extension-document": "^2.11.2",
     "@tiptap/extension-history": "^2.11.3",
@@ -21,7 +22,6 @@
     "@tiptap/pm": "^2.11.2",
     "@tiptap/react": "^2.11.2",
     "@tiptap/starter-kit": "^2.11.2",
-    "axios": "^1.7.9",
     "modern-screenshot": "^4.5.5",
     "motion": "^12.0.1",
     "postcss-loader": "^8.1.1",
