--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@floating-ui/react-dom": "^2.1.2",
     "@react-oauth/google": "^0.12.1",
+    "@tanstack/query-sync-storage-persister": "^5.66.0",
     "@tanstack/react-query": "^5.66.0",
+    "@tanstack/react-query-persist-client": "^5.66.0",
     "@tiptap/extension-character-count": "^2.11.2",
     "@tiptap/extension-document": "^2.11.2",
     "@tiptap/extension-history": "^2.11.3",
@@ -34,7 +36,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
-    "@types/node": "^22.13.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.5.0",
